2003-10-27  Werner Koch  <wk@gnupg.org>

	Prefixed all (pubkey,digest,cipher}_spec_* globale varaibles with
	_gcry_.

	* ac.c (ac_key_identifiers): Made static.

	* random.c (getfnc_gather_random,getfnc_fast_random_poll): Move
	prototypes to ..
	* rand-internal.h: .. here 
	* random.c (getfnc_gather_random): Include rndw32 gatherer.
	* rndunix.c, rndw32.c, rndegd.c: Include them here.
	* rndlinux.c (_gcry_rndlinux_gather_random): Prepend the _gcry_
	prefix.  Changed all callers.
	* rndegd.c (_gcry_rndegd_gather_random): Likewise.
	(_gcry_rndegd_connect_socket): Likewise.
	* rndunix.c (_gcry_rndunix_gather_random): Likewise.
	(waitpid): Made static.
	* rndw32.c: Removed the old and unused winseed.dll cruft.
	(_gcry_rndw32_gather_random_fast): Renamed from
	gather_random_fast.
	(_gcry_rndw32_gather_random): Renamed from gather_random.  Note,
	that the changes 2003-04-08 somehow got lost.

	* sha512.c (sha512_init, sha384_init): Made static.

	* cipher.c (do_ctr_decrypt): Removed "return" from this void
	function.

2003-10-24  Moritz Schulte  <mo@g10code.com>

	* serpent.c: Fix an issue on big-endian systems.

	* rndw32.c: Removed IS_MODULE -cruft.
	* rndlinux.c (rndlinux_gather_random): Likewise.

2003-10-10  Werner Koch  <wk@gnupg.org>

	* primegen.c (gen_prime): Bail out if NBITS is less than 16.
	(prime_generate_internal): Initialize prime variable to suppress
	compiler warning.  Check pbits, initialize qbits when passed as
	zero.

	* primegen.c (prime_generate_internal): New arg
	ALL_FACTORS. Changed all callers.
	(gcry_prime_generate): Make the factors arg optional. Request
	all_factors.  Make sure PRIME is set to NULL even on error.
	(gcry_prime_group_generator): New.
	(gcry_prime_release_factors): New.

2003-10-06  Werner Koch  <wk@gnupg.org>

	* primegen.c (gen_prime): Assert that NBITS is never zero, it
	would cause a segv.

2003-09-28  Moritz Schulte  <mo@g10code.com>

	* ac.c: Include "cipher.h".

2003-09-27  Moritz Schulte  <mo@g10code.com>
